# dar-backup

./: .coveragerc  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  _config.yml  codecov.yml  downloads.json  index.html  index.md  test.html  track_downloads.py
.github/: dependabot.yml  install.yml  pull_request_template.md
AI-python-wrapper/: .darrc  README.md
backups.d/: TEST  TEST_EXCLUDES  TEST_INCLUDES  TEST_INCLUDES_EXCLUDES
clonepulse/: add_release_annotation.py  badge_clones.json  downloads.json  fetch_clones.json  milestone_1000.txt  milestone_10000.txt  milestone_2000.txt  milestone_500.txt  milestone_5000.txt  milestone_badge.json
conf/: dar-backup.conf  dar_par.dcf.template  dar_par_create.duc  dar_par_test.duc
dar-backup.py/: README.md
doc/: catalogs.md
share/: README.md  alert-upcoming-diff-backup.timer  alert-upcoming-full-backup.timer  dar-backup.service  dar-backup.timer  dar-diff-backup.timer  dar-inc-backup.timer
templates/: TEST  dar-backup.conf  dar-backup.conf.template  dar_par.dcf.template  darrc.template
test/: dar-operations.sh.org  mk-DEV.sh  mk-release.sh  report-deleted-files.sh  run-test.sh  runner.sh  setup.sh  test-backups.sh  test-check-if-no-restorefile.sh  test-cleanup-alternate-dir.sh  test-cleanup-fail-diff-age-calc.sh  test-cleanup.sh  (+29 more)
v2/: .coveragerc  .darrc  Changelog.md  MANIFEST.in  README.md  __init__.py  base_test_case.py  build-history.json  build.sh  prompts.md  pyproject.toml  pytest-cov.sh  pytest-minimal.ini  pytest.ini  release.sh  requirements-dev.txt  result.txt  setup-environment.py  setup.cfg  setup.py  setup_environment.py  sitecustomize.py  testall.sh  verify-signature.sh
v2/backups/: superblock_backup.1.dar  test_backup.1.dar
v2/conf/: dar-backup.conf
v2/dar_backup/: Manifest.in  cleanup.py  config_settings.py  dar_backup.py  pyproject.toml  util.py
v2/dar_backup.egg-info/: top_level.txt
v2/doc/: Gemini3-assessment.md  NFS server notes.md  badge_clones.json  cli-reference.md  clones.json  config-reference.md  dar-backup-dashboard.png.org  dar-tips.md  dar_manager_w_dst_bug_report.md  dashboard-and-metrics.md  dev.md  doc.md  getting-started.md  par2.md  pitr-archive-date-vs-file-mtime.md  portable-par2-layout.md  quick-guide.md  restoring.md  shell-completion.md  systemd-setup.md  todo.md  troubleshooting.md
v2/doc/badges/: README.md  badge_clones.json  milestone_badge.json
v2/doc/releases/: README.md
v2/doc/test-report/: dar-backup-1.1.0__pytest-full__2026-02-05T15-05-00Z.txt  dar-backup-1.1.0__pytest-full__2026-02-05T15-05-00Z__collect.txt  dar-backup-1.1.10__pytest-full__2026-07-07T12-58-56Z.txt  dar-backup-1.1.10__pytest-full__2026-07-07T12-58-56Z__collect.txt  dar-backup-1.1.1__pytest-full__2026-02-14T09-11-17Z.txt  dar-backup-1.1.1__pytest-full__2026-02-14T09-11-17Z__collect.txt  dar-backup-1.1.2__pytest-full__2026-03-15T11-51-03Z.txt  dar-backup-1.1.2__pytest-full__2026-03-15T11-51-03Z__collect.txt  dar-backup-1.1.3__pytest-full__2026-03-22T10-18-57Z.txt  dar-backup-1.1.3__pytest-full__2026-03-22T10-18-57Z__collect.txt  dar-backup-1.1.4__pytest-full__2026-05-09T08-54-50Z.txt  dar-backup-1.1.4__pytest-full__2026-05-09T08-54-50Z__collect.txt  dar-backup-1.1.5__pytest-full__2026-05-17T15-28-14Z.txt  dar-backup-1.1.5__pytest-full__2026-05-17T15-28-14Z__collect.txt  dar-backup-1.1.6__pytest-full__2026-06-05T12-34-26Z.txt  dar-backup-1.1.6__pytest-full__2026-06-05T12-34-26Z__collect.txt  dar-backup-1.1.7__pytest-full__2026-06-06T15-56-08Z.txt  dar-backup-1.1.7__pytest-full__2026-06-06T15-56-08Z__collect.txt  dar-backup-1.1.8__pytest-full__2026-06-11T11-44-27Z.txt  dar-backup-1.1.8__pytest-full__2026-06-11T11-44-27Z__collect.txt  dar-backup-1.1.9__pytest-full__2026-06-20T19-40-53Z.txt  dar-backup-1.1.9__pytest-full__2026-06-20T19-40-53Z__collect.txt  large-scale-results.jsonl  large_scale_test.md
v2/home/pj/.config/dar-backup/: dar-backup.conf
v2/scripts/: copy_docs.sh  import-archive-metrics.py  large_scale_test.sh  lock-old-archives.sh  pre-backup-pcloud-cache-clear.sh  pre-commit-version-bump.sh  pytest_report.sh  rewrite_readme_links.py  show_large_scale_results.py  track_downloads.py
v2/src/: cleanup.py
v2/src/dar_backup/: .darrc  __about__.py  clean_log.py  cleanup.py  command_runner.py  config_settings.py  dar-backup.conf  dar-backup.conf.j2  dar_backup.py  dar_backup_systemd.py  dashboard.py  demo.py  demo_backup_def.j2  exceptions.py  installer.py  manager.py  rich_progress.py  util.py  verify_signature.py
v2/src/dar_backup/data/: dashboard.html  discord_report.j2
v2/src/misc/: curl.sh  downloads.py  duplicate2format.py  fetch_clones.py  generate_clone_dashboard.py
v2/template/: .darrc  dar-backup.conf.template
v2/test/: base_test_case.py  conftest.py  install.py  test-bitrot.py  test-cleanup.py  test_bitrot.py  test_cleanup.py  test_create_full_diff_incr_backup.py  test_listing.py  test_prereq.py  test_space_definition.py
v2/tests/: conftest.py  envdata.py  install.py  test_add_old_archive_confirmation.py  test_alternate_reference_archive.py  test_autocompletion_install.py  test_backup_timeout.py  test_binary_info.py  test_bitrot.py  test_clean_log.py  test_cleanup.py  test_cleanup_full_archive_deletion_real.py  test_command_runner.py  test_concurrent_backup.py  test_config_comments.py  test_config_settings.py  test_corrupt_disk.py  test_create_backup_command.py  test_create_full_diff_incr_backup.py  test_dar_backup.py  test_dar_backup_additional_coverage.py  test_dar_backup_integration.py  test_dar_backup_startup.py  test_dar_deleted_flag.py  test_dar_locale.py  test_dar_ownership_precedence.py  test_darrc.py  test_dashboard.py  test_dashboard_html.py  test_dashboard_smoke.py  test_demo.py  test_discord_webhook.py  test_discord_webhook_integration.py  test_disk_full.py  test_doctype_handler.py  test_duplicate2format.py.org  test_filter_darrc_file.py  test_generic_backup_command_execution.py  test_get_config_file.py  test_gpt_file_compression.py  (+60 more)
v2/tests/template/: dar-backup.conf.template
v2/tools/: build_deb.py
(+130 files in other folders)
