[build-system]
requires = ['hatchling']
build-backend = "hatchling.build"

[tool.pytest.ini_options]
# test the deployed package
pythonpath = "venv/lib/python3.12/site-packages"
addopts = [
    "--import-mode=importlib",
]

[tool.hatch.build]
include = [
    "Changelog.md",
    "LICENSE",
    "README.md"
]


[tool.hatch.build.targets.sdist]
include = [
  "/src/dar_backup", "/tests"
]

[tool.hatch.build.targets.wheel]
packages = ["src/dar_backup"]
sources = ["src"]

[tool.hatch.version]
path = "src/dar_backup/__about__.py"

[project.scripts]
dar-backup = "dar_backup.dar_backup:main"
cleanup = "dar_backup.cleanup:main"
clean-log = "dar_backup.clean_log:main"
manager = "dar_backup.manager:main"

[project]
name = "dar-backup"
dynamic = [
  "version",
]
authors = [
  { name="dar-backup", email="per2jensen@gmail.com" },
]
description = """A script to do full, differential and incremental backups using dar.
    Some files are restored from the backups during verification, after which par2 redundancy files are created.
    The script also has a cleanup feature to remove old backups and par2 files."""
readme = "README.md"
readme-content-type = "text/markdown"
license = { file="LICENSE", name="GPL-3.0-or-later" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    'Programming Language :: Python :: 3.9',
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Archiving :: Backup",
]

[project.urls]
Homepage = "https://github.com/per2jensen/dar-backup/tree/main/v2"
Changelog = "https://github.com/per2jensen/dar-backup/blob/main/v2/Changelog.md"
Issues = "https://github.com/per2jensen/dar-backup/issues"
