[build-system]
requires = ['hatchling']
build-backend = "hatchling.build"

#[tool.pytest.ini_options]
# test the deployed package
#pythonpath = "venv/lib/python3.12/site-packages"
#addopts = [
#    "--import-mode=importlib",
#    "--cov=dar_backup",
#    "--cov-report=xml",
#    "--no-cov-on-fail"
#]

#addopts = [
#    "--import-mode=importlib",
#]


[tool.hatch.build]
include = [
  "src/dar_backup/**",
  "README.md",
  "Changelog.md",
  "LICENSE",
  "verify-signature.sh",
  "doc/**",
  "src/dar_backup/README.md",
  "src/dar_backup/Changelog.md"
]

[tool.hatch.build.targets.wheel]
packages = ["src/dar_backup"]
sources = ["src"]


[tool.hatch.version]
path = "src/dar_backup/__about__.py"

[tool.dar-backup]
gpg_key_id =      "B54F5682F28DBA3622D78E0458DBFADBBBAC1BB1"
gpg_fingerprint = "B54F 5682 F28D BA36 22D7  8E04 58DB FADB BBAC 1BB1"
gpg_key_url =     "https://keys.openpgp.org/vks/v1/by-fingerprint/4592D7396DBAEFFD084502B85CCEC7E16814A36E"

[project.scripts]
dar-backup = "dar_backup.dar_backup:main"
cleanup = "dar_backup.cleanup:main"
clean-log = "dar_backup.clean_log:main"
manager = "dar_backup.manager:main"
demo = "dar_backup.demo:main"
installer = "dar_backup.installer:main"
dar-backup-systemd = "dar_backup.dar_backup_systemd:main"


[project]
name = "dar-backup"
dynamic = [
  "version",
]
authors = [
  { name="dar-backup", email="dar-backup@pm.me" },
]
description = """A script to do full, differential and incremental backups using dar.
    Some files are restored from the backups during verification, after which par2 redundancy files are created.
    The script also has a cleanup feature to remove old backups and par2 files."""
readme = "README.md"
readme-content-type = "text/markdown"
license = { file="LICENSE", name="GPL-3.0-or-later" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    'Programming Language :: Python :: 3.9',
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Archiving :: Backup",
]


dependencies = [
    "inputimeout>=1.0.4",
    "rich>=13.0.0",
    "argcomplete>=3.6.2",
    "Jinja2>=3.1.6",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "wheel>=0.45.1",
  "requests>=2.32.2",
  "coverage>=7.8.2",
  "pytest>=8.4.0",
  "pytest-cov>=6.1.1",
  "psutil>=7.0.0",
  "pytest-timeout>=2.4.0",
  "httpcore>=0.17.3",
  "h11>=0.16.0",
  "zipp>=3.19.1",
  "anyio>=4.4.0",
  "black>=25.1.0",
  "pandas>=2.3.0",
  "matplotlib>=3.10.3",
]

packaging = [
 "build>=1.2.2",
 "hatchling>=1.27.0",
 "hatch>=1.14.1",
 "twine>=6.1.0",
]

[project.urls]
"GPG Public Key" = "https://keys.openpgp.org/search?q=dar-backup@pm.me"
Homepage = "https://github.com/per2jensen/dar-backup/tree/main/v2"
Changelog = "https://github.com/per2jensen/dar-backup/blob/main/v2/Changelog.md"
Issues = "https://github.com/per2jensen"
