[build-system]
requires = ['hatchling']
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "src/dar_backup/**",
  "README.md",
  "Changelog.md",
  "LICENSE",
  "verify-signature.sh",
  "doc/**",
  "src/dar_backup/README.md",
  "src/dar_backup/Changelog.md",
  "src/dar_backup/data/dashboard.html",
  "src/dar_backup/data/discord_report.j2"
]

[tool.hatch.build.targets.wheel]
packages = ["src/dar_backup"]
sources = ["src"]
artifacts = ["src/dar_backup/doc/*.md", "src/dar_backup/README.md", "src/dar_backup/Changelog.md"]


[tool.hatch.version]
path = "src/dar_backup/__about__.py"

[tool.dar-backup]
gpg_key_id =      "B54F5682F28DBA3622D78E0458DBFADBBBAC1BB1"
gpg_fingerprint = "B54F 5682 F28D BA36 22D7  8E04 58DB FADB BBAC 1BB1"
gpg_key_url =     "https://keys.openpgp.org/vks/v1/by-fingerprint/4592D7396DBAEFFD084502B85CCEC7E16814A36E"


[tool.mypy]
python_version = "3.11"
files = ["src"]

[[tool.mypy.overrides]]
module = "inputimeout"
ignore_missing_imports = true

[tool.ruff]
line-length = 150
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "UP", "B", "BLE", "TRY", "DTZ", "S"]
ignore = [
    # Type-hint modernisation (List→list, Optional→X|None, etc.) — deferred large-scale refactor
    "UP006",
    "UP007",
    "UP035",
    "UP045",
    # yield-from inside try/finally — subtle generator semantics change, skip
    "UP028",
    # Pure control-flow-shape style preferences, no correctness value; high review churn
    "TRY003",
    "TRY300",
    "TRY301",
    # Archive-filename date parsing is deliberately naive (date-only granularity, no
    # time-of-day component — see doc/pitr-archive-date-vs-file-mtime.md); forcing
    # tz-awareness here risks naive/aware comparison TypeErrors for no correctness gain
    "DTZ007",
    "DTZ901",
]

[project.scripts]
dar-backup = "dar_backup.dar_backup:main"
cleanup = "dar_backup.cleanup:main"
clean-log = "dar_backup.clean_log:main"
manager = "dar_backup.manager:main"
demo = "dar_backup.demo:main"
installer = "dar_backup.installer:main"
dar-backup-systemd = "dar_backup.dar_backup_systemd:main"
dar-backup-dashboard = "dar_backup.dashboard:main"


[project]
name = "dar-backup"
dynamic = [
  "version",
]
authors = [
  { name="dar-backup", email="dar-backup@pm.me" },
]
description = """A script to do full, differential and incremental backups using dar.
    Some files are restored from the backups during verification, after which par2 redundancy files are created.
    The script also has a cleanup feature to remove old backups and par2 files."""
readme = "README.md"
readme-content-type = "text/markdown"
license = { file="LICENSE", name="GPL-3.0-or-later" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Archiving :: Backup",
]


dependencies = [
    "dateparser>=1.2.0",
    "inputimeout>=1.0.4",
    "rich>=13.0.0",
    "argcomplete>=3.6.2",
    "Jinja2>=3.1.6",
]

[project.optional-dependencies]
dashboard = [
  "datasette>=0.65.2",
]

dev = [
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "pytest-mock",
  "pytest-timeout>=2.4.0",
  "pytest-json-report",
  "ruff",
  "mypy",
  "types-dateparser",
  "wheel>=0.45.1",
  "requests>=2.34.2",
  "coverage>=7.15.0",
  "psutil>=7.0.0",
  "httpcore>=1.0.9",
  "h11>=0.16.0",
  "zipp>=4.1.0",
  "anyio>=4.13.0",
  "pandas>=3.0.3",
  "matplotlib>=3.11.0",
]

packaging = [
 "build>=1.2.2",
 "hatchling>=1.30.1",
 "hatch>=1.17.0",
 "twine>=6.1.0",
]

[tool.coverage.run]
data_file = "/tmp/.coverage"
# parallel=true so each subprocess gets its own .coverage.<pid> file;
# concurrent subprocesses (e.g. test_concurrent_backup.py) do not contend
# for the same file.  pytest_report.sh already runs `coverage combine`.
parallel = true

[project.urls]
"GPG Public Key" = "https://keys.openpgp.org/search?q=dar-backup@pm.me"
Homepage = "https://github.com/per2jensen/dar-backup/tree/main/v2"
Changelog = "https://github.com/per2jensen/dar-backup/blob/main/v2/Changelog.md"
Issues = "https://github.com/per2jensen"
