[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dar-backup"
authors = [
  { name="dar-backup", email="per2jensen@gmail.com" },
]
description = "A script to do full, differential and incremental backups using dar.
    Some files are restored from the backups during verification, after which par2 redundancy files are created.
    The script also has a cleanup feature to remove old backups and par2 files."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Archiving :: Backup",
]

[project.urls]
Homepage = "https://github.com/per2jensen/dar-backup"
Issues = "https://github.com/per2jensen/dar-backup/issues"